--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+lazy_static = "1.5.0"
+rand = { version="0.9.0", features=["thread_rng"] }
+reqwest = { version = "0.12.12", features = ["json"] }
+rocket = { version = "0.5.1", features = ["json"] }
